tests/dataset/tpc-ds/compiler/kotlin/q37.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q37.kt:53:83: error: type mismatch: inferred type is Double but Boolean was expected
                                if (toDouble(toDouble(i.i_current_price) >= 20 && i.i_current_price) <= 50 && i.i_manufact_id >= 800 && i.i_manufact_id <= 803 && inv.inv_quantity_on_hand >= 100 && inv.inv_quantity_on_hand <= 500) {
                                                                                  ^
